test/Fail/Issue3207.agda
-- Andreas, 2018-09-03, issue #3207
--
-- Error message for disabled Prop.

{-# OPTIONS --no-prop #-}

test = Prop
