test/Fail/Issue3207.err
Issue3207.agda:7.8-12: error: [NotInScope]
Not in scope:
  Prop at Issue3207.agda:7.8-12
    (did you mean
       'Agda.Primitive.Prop' or
       'Agda.Primitive.Propω'?)
when scope checking Prop
